--- a/index.html
+++ b/index.html
@@ -602,6 +602,7 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
                             <li><a href="/blog" class="hover-underline">Blog</a></li>
 
                             <li><a href="/contact" class="hover-underline">Contact</a></li>
+                            <li><a href="/pricing">Pricing</a></li>
                         </ul>
                     </div>
                     
