--- a/index.html
+++ b/index.html
@@ -381,15 +381,15 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
             <div class="bg-white p-6 rounded-custom border border-custom hover:bg-gray-50 transition-colors">
                 <div class="flex items-center mb-4">
                     <div class="w-10 h-10 bg-primary rounded-full flex items-center justify-center text-white font-bold mr-3">
-                        A
+                        S
                     </div>
                     <div>
-                        <h4 class="font-semibold">Alex Chen</h4>
+                        <h4 class="font-semibold">Suraj Kumar</h4>
                         <p class="text-gray-600 text-sm">Bot Developer</p>
                     </div>
                 </div>
                 <p class="text-gray-600 text-sm">
-                    "TeleBotHost made deploying my customer service bot incredibly easy. The TBL language is intuitive and the hosting is rock solid."
+                    "TeleBotHost is one my favourite deploying services for telegram bots which bring all in one place from code to Webapp all in one place no need get hosting add format and all that stuff and downtime hell nah <b><a href="https://t.me/update_chat/34806">99% uptime this month</a></b>"
                 </p>
             </div>
             
