--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
                     </div>
                     <h3 class="text-xl font-semibold mb-2">Highly Secure</h3>
                     <p class="text-gray-600">
-                        Enterprise-grade security protects your bots and user data with end-to-end encryption.
+                        Enterprise-grade security protects your bots token with secure encryption technology.
                     </p>
                 </div>
                 
