--- a/index.html
+++ b/index.html
@@ -581,6 +581,9 @@ Telegram bot hosting, free Telegram bot hosting, best Telegram bot hosting, secu
                         <a href="https://github.com/telebothost/landing-page" class="text-black">
                             <i data-lucide="github" class="w-5 h-5"></i>
                         </a>
+    <a href="https://github.com/telebothost/landing-page" class="text-black">
+<i data-lucide="send" class="w-5 h-5 rotate-45"></i>
+                        </a>
                     </div>
                 </div>
                 
