--- a/pricing/index.html
+++ b/pricing/index.html
@@ -321,10 +321,9 @@
 
   </div>
 
-  <p class="footnote">
-    * File system is OK for development and will be available soon where noted.  
-    For custom or larger deployments, please contact support.
-  </p>
+<p class="footnote">
+  * We accept payments in officially recognized cryptocurrencies, Indian Rupees (INR), and Pakistani Rupees (PKR).
+</p>
 </section>
 
 <footer class="footer">
